Fixed spacing issue on group avatar setting

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_groups_management.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_groups_management.scss
@@ -139,3 +139,7 @@
 	}
 
 } //close .groups-manage-members-list
+
+#avatar-crop-actions {
+	margin-top: 15px;
+}
